# ur5_vision_pick

./: README.md
ur5_demo/: README.md
ur5_demo/launch/: test_move.launch
ur5_demo/scripts/: test_move.py
ur5_demo/src/: test_move.cpp
ur5_description/: CMakeLists.txt  REAMME.md  package.xml  ur5_hitbot_with_ilc_platform.gv
ur5_description/config/: ur5_view.rviz
ur5_description/launch/: display.launch  visualize_ur5.launch
ur5_description/meshes/: block.stl  container.stl  realsense_d435.stl
ur5_description/urdf/: ilc_platform.urdf.xacro  ur5_hitbot_with_ilc_platform.urdf.xacro  ur5_hitbot_with_ilc_platform.xacro.urdf  ur5_with_realsense.xacro.urdf
ur5_description/urdf/hitbot/: hitbot.gazebo.xacro  hitbot.urdf.xacro
ur5_description/urdf/sensor/: camera.urdf.xacro
ur5_gasping/launch/: initialize.launch
ur5_gasping/src/: vision_manager.cpp
ur5_grasping/: CMakeLists.txt  README.md  camera.py  core.py  depth_center.py  gripper.py  package.xml  python_realsense.py  test_move.py  ur5_mp.py  ur5_pick_up.py  ur5_vision.py  ur5_vision_sync.py  ur5_vision_unsynced.py  util.py
ur5_grasping/cfg/: realsense_d435.yaml
ur5_grasping/launch/: coordinate.launch  initialize.launch  publish.launch  real_robot.launch  realsense.launch  ur5_grasping_demo.launch  ur5_real_robot.launch
ur5_grasping/msg/: Tracker.msg
ur5_grasping/src/: vision_manager.cpp
ur5_pick_moveit_config/: .setup_assistant  package.xml
ur5_pick_moveit_config/config/: fake_controllers.yaml  ros_controllers.yaml  ur5_hitbot_with_ilc_platform.srdf
ur5_pick_moveit_config/launch/: default_warehouse_db.launch  demo.launch  demo_gazebo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  move_group.launch  moveit_rviz.launch  planning_context.launch  planning_pipeline.launch.xml  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  ur5_pick_moveit_controller_manager.launch.xml  warehouse.launch
ur5_vision_pick/: README.md
ur5_vision_pick/ur5_demo/: CMakeLists.txt  package.xml
ur5_vision_pick/ur5_description/: REAMME.md  package.xml
ur5_vision_pick/ur5_description/launch/: display.launch  visualize_ur5.launch
ur5_vision_pick/ur5_description/urdf/: _d435.urdf.xacro  ur5_hitbot_with_ilc_platform.urdf.xacro  ur5_with_realsense.xacro.urdf
ur5_vision_pick/ur5_grasping/: CMakeLists.txt  gripper.py  python_realsense.py  ur5_pick_up.py
ur5_vision_pick/ur5_grasping/include/ur5_grasping/: grasping_demo.h
ur5_vision_pick/ur5_grasping/launch/: coordinate.launch  real_robot.launch
ur5_vision_pick/ur5_grasping/msg/: Tracker.msg
ur5_vision_pick/ur5_grasping/src/: grasping_demo.cpp  vision_manager.cpp
ur5_vision_pick/ur5_pick_moveit_config/: CMakeLists.txt  package.xml
ur5_vision_pick/ur5_pick_moveit_config/config/: fake_controllers.yaml  ur5_pick.srdf
ur5_vision_pick/ur5_pick_moveit_config/launch/: chomp_planning_pipeline.launch.xml  demo.launch  demo_gazebo.launch  gazebo.launch  ompl_planning_pipeline.launch.xml  ros_controllers.launch  run_benchmark_ompl.launch
ur5_vision_pick/ur5_pick_place/: CMakeLists.txt
ur5_vision_pick/ur5_vision_pick/ur5_detection/launch/: ur5_detect.launch
ur5_vision_pick/ur5_vision_pick/ur5_pick_place/: package.xml
ur5_vision_pick/ur5_vision_pick/ur5_pick_place/launch/: pick_place.launch
ur5_vision_pick/ur5_vision_pick/ur5_pick_place/src/: pick_place.cpp
ur5_vision_pick/ur5_vision_pick/ur5_vison/: README.md
ur5_vision_pick_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
ur5_vision_pick_moveit_config/config/: ur5_hitbot_with_ilc_platform.srdf
ur5_vision_pick_moveit_config/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  demo_gazebo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  move_group.launch  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  ur5_hitbot_with_ilc_platform_moveit_controller_manager.launch.xml  warehouse.launch
