<?xml version="1.0"?>
<package>
  <name>ur5_description</name>
  <version>0.1.0</version>
  <description>
      URDF description for Universal UR5 robot arms
  </description>

  <author>Lei Zhang</author>
  <maintainer email="portgasray@163.com">Lei Zhang</maintainer>
 
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>xacro</run_depend>
  <run_depend>ur_description</run_depend>

</package>
