<?xml version="1.0"?>
<package>
  <name>ur5_description</name>
  <version>0.4.0</version>
  <description>
      URDF description for Universal UR5 robot arms
  </description>

  <author>Lei Zhang</author>
  <maintainer email="portgasray@163.com">Lei Zhang</maintainer>
 
  <license>BSD</license>
  <url>http://ros.org/wiki/urdf_tutorial</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslaunch</build_depend>

  <run_depend>ur_description</run_depend>
  <run_depend>joint_state_publisher</run_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>rviz</run_depend>
  <run_depend>xacro</run_depend>
  <!-- <exec_depend>ur5_description</exec_depend> -->
</package>


