<?xml version="1.0"?>

<!--
Copyright (c) 2018 Intel Corporation

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

     http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
-->

<package format="2">
  <name>ur5_pick_place</name>
  <version>0.1.0</version>
  <description>Demo code for pick and place</description>
  
  <author>Lei Zhang</author>
  <maintainer email="portgasray@163.com">Lei Zhang</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>moveit_core</build_depend>
  <build_depend>moveit_visual_tools</build_depend>
  <build_depend>moveit_ros_planning</build_depend>
  <build_depend>moveit_ros_planning_interface</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>geometric_shapes</build_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>moveit_core</exec_depend>
  <exec_depend>moveit_visual_tools</exec_depend>
  <exec_depend>moveit_ros_planning</exec_depend>
  <exec_depend>moveit_ros_planning_interface</exec_depend>
  <exec_depend>pluginlib</exec_depend>

</package>
